# unkad-oversight

./: .gitignore  PAPER.md  PREREGISTRATION.md  README.md  pyproject.toml  results-INVALID-n60.tsv  results.tsv  run_carryover.sh  run_carryover_resume.sh  run_collapse.sh  run_overnight.sh
collapse/: PREREGISTRATION.md  README.md  RESULTS.md  analyse.py  framing.py  results.tsv  task.py
oversight/: analyse.py  fabrication.py  protocols.py  task.py  validate.py
tests/: test_replication.py
transcripts/: 2026-07-22T01-41-41-00-00_debate-none_V8SKG9a6yCARFPrX2sQ8M6.eval  2026-07-22T02-27-39-00-00_direct-none_55tTZy3EWfsTpMPwQTqQGa.eval  2026-07-22T02-32-29-00-00_direct-obscured_egWrz3YyfPFXxSckBAvWXb.eval  2026-07-22T02-41-39-00-00_debate-obscured_UJHmPWAJi9fJQD8msQvniT.eval  2026-07-22T03-30-30-00-00_consultancy-none_5C3QSLy9JHBtWMLLQfJt6V.eval  2026-07-22T03-53-42-00-00_consultancy-obscured_ezYWgVq62DXbZJyRmvFBUZ.eval  2026-07-22T04-24-00-00-00_direct-full_iwxPTVVexvF8RcEnVe2LPX.eval  2026-07-22T04-29-54-00-00_debate-full_Hf2nRDoa7uhMPvsUgj9fZT.eval  2026-07-22T05-16-56-00-00_consultancy-full_XRNpjNCzZJQZJtc96E6d7r.eval  2026-07-22T05-42-18-00-00_debate-none_9cUhY6MMzEZgLJZuaYWsJb.eval  2026-07-22T06-30-40-00-00_direct-none_h73eLrYPtn7WkUiD86GaZ6.eval  2026-07-22T06-35-37-00-00_direct-obscured_krJnCmL9DywJtHNcUwxs4k.eval  2026-07-22T06-44-31-00-00_debate-obscured_98sBYKjhNh4h4mgQg7NQib.eval  2026-07-22T07-41-03-00-00_consultancy-none_DCQxd4XBVi57BUGkb63Unp.eval  2026-07-22T08-07-47-00-00_consultancy-obscured_NduiEgdVJqakXGc8doSnRT.eval  MANIFEST.tsv  README.md  (+3 more)
(+17 files in other folders)
